@@ -109,6 +109,7 @@ static char sccsid[] = "@(#)rcmd.c	8.3 (Berkeley) 3/26/94";
 #include "src/common/xpoll.h"
 #include "src/pdsh/dsh.h"
 #include "src/pdsh/mod.h"
+#include "src/pdsh/privsep.h"
 
 #define RSH_PORT 514
 
@@ -218,7 +219,7 @@ xrcmd(char *ahost, char *addr, char *locuser, char *remuser,
     sigaddset(&blockme, SIGURG);
     pthread_sigmask(SIG_BLOCK, &blockme, &oldset);
     for (timo = 1, lport = IPPORT_RESERVED - 1;;) {
-        s = rresvport(&lport);
+        s = privsep_rresvport(&lport);
         if (s < 0) {
             if (errno == EAGAIN)
                 err("%p: %S: rcmd: socket: all ports in use\n", ahost);
@@ -257,7 +258,7 @@ xrcmd(char *ahost, char *addr, char *locuser, char *remuser,
         lport = 0;
     } else {
         char num[8];
-        int s2 = rresvport(&lport), s3;
+        int s2 = privsep_rresvport(&lport), s3;
         socklen_t len = sizeof(from);   /* arg to accept */
 
         if (s2 < 0)
